fix scrollbar for open orders table

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -33,3 +33,7 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #18294b;
 }
+
+::-webkit-scrollbar-corner {
+  display: none;
+}
