--- a/src/styles/panel.module.scss
+++ b/src/styles/panel.module.scss
@@ -85,4 +85,6 @@
 
 .open {
   grid-area: open;
+  width:100%;
+  overflow:hidden;
 }
